--- a/index.html
+++ b/index.html
@@ -26,5 +26,67 @@
 		</div>
 	</section>
 	</section>
+	<section class="services" id="services">
+		<div class="container">
+			<h3 class="section_title">Services</h3>
+			<h4 class="section_description">Proin iaculis purus consequat sem cure.</h4>
+			<div class="services_wrap clearfix">
+				<div class="services_item">
+					<img src="pic/e_commerce.jpg" alt="">
+					<h5>E-Commerce</h5>
+					<h6>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</h6>
+				</div>
+				<div class="services_item">
+					<img src="pic/resp_web.jpg" alt="">
+					<h5>Responsive Web</h5>
+					<h6>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</h6>
+				</div>
+				<div class="services_item">
+					<img src="pic/web_sec.jpg" alt="">
+					<h5>Web Security</h5>
+					<h6>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</h6>
+				</div>
+			</div>
+		</div>	
+	</section>
+	<section class="portfolio" id="portfolio">
+		<div class="container">
+			<h3 class="section_title">Our portfolio</h3>
+			<h4 class="section_description">Proin iaculis purus consequat sem cure.</h4>
+			
+			<div class="row clearfix">
+					<div class="col-4">
+						<img src="img/ebony_ivory.jpg" alt="">
+						<h5>Ebony & Ivory</h5>
+						<p id="tag">Branding</p>
+					</div>
+					<div class="col-4">
+						<img src="img/smart_stationary.jpg" alt="">
+						<h5>Smart Stationary</h5>
+						<p id="tag">Print Design</p>
+					</div>
+					<div class="col-4">
+						<img src="img/clever_poster.jpg" alt="">
+						<h5>Clever Poster</h5>
+						<p id="tag">Print Design</p>
+					</div>
+										<div class="col-4">
+						<img src="img/vynil_record.jpg" alt="">
+						<h5>Vinyl Record</h5>
+						<p id="tag">Product Mock-Up</p>
+					</div>
+					<div class="col-4">
+						<img src="img/treehouse.jpg" alt="">
+						<h5>Treehouse Template</h5>
+						<p id="tag">Web Design</p>
+					</div>
+					<div class="col-4">
+						<img src="img/burned_logo.jpg" alt="">
+						<h5>Burned Logo</h5>
+						<p id="tag">Branding</p>
+					</div>
+			</div>
+		</div>
+	</section>
 </body>
 </html>
