--- a/index.html
+++ b/index.html
@@ -26,5 +26,28 @@
 		</div>
 	</section>
 	</section>
+	<section class="services" id="services">
+		<div class="container">
+			<h3 class="section_title">Services</h3>
+			<h4 class="section_description">Proin iaculis purus consequat sem cure.</h4>
+			<div class="services_wrap clearfix">
+				<div class="services_item">
+					<img src="pic/e_commerce.jpg" alt="">
+					<h5>E-Commerce</h5>
+					<h6>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</h6>
+				</div>
+				<div class="services_item">
+					<img src="pic/resp_web.jpg" alt="">
+					<h5>Responsive Web</h5>
+					<h6>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</h6>
+				</div>
+				<div class="services_item">
+					<img src="pic/web_sec.jpg" alt="">
+					<h5>Web Security</h5>
+					<h6>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</h6>
+				</div>
+			</div>
+		</div>	
+	</section>
 </body>
 </html>
